<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:happyPlaces="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlacesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_places_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        happyPlaces:layout_constraintStart_toStartOf="parent"
        happyPlaces:layout_constraintEnd_toEndOf="parent"
        happyPlaces:layout_constraintTop_toTopOf="parent"
        style="@style/CustomToolbarStyle"/>

    <ScrollView
        android:id="@+id/add_places_content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        happyPlaces:layout_constraintStart_toStartOf="parent"
        happyPlaces:layout_constraintEnd_toEndOf="parent"
        happyPlaces:layout_constraintTop_toBottomOf="@id/add_places_toolbar">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/add_places_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_places_title_label"
                android:layout_marginVertical="@dimen/add_places_til_margin"
                happyPlaces:boxStrokeColor="@color/colorSecondary"
                happyPlaces:hintTextColor="@color/colorSecondaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/add_places_til_margin"
                android:hint="@string/add_places_description_label"
                happyPlaces:boxStrokeColor="@color/colorSecondary"
                happyPlaces:hintTextColor="@color/colorSecondaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/add_places_til_margin"
                android:hint="@string/add_places_date_label"
                happyPlaces:boxStrokeColor="@color/colorSecondary"
                happyPlaces:hintTextColor="@color/colorSecondaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/add_places_til_margin"
                android:hint="@string/add_places_location_label"
                happyPlaces:boxStrokeColor="@color/colorSecondary"
                happyPlaces:hintTextColor="@color/colorSecondaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/add_places_horizontal_ll_margin">
                <ImageView
                    android:id="@+id/iv_selected_image"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:src="@drawable/empty_image"
                    android:scaleType="fitCenter"
                    android:layout_margin="4dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_image_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/add_places_text_view_label"
                    happyPlaces:backgroundTint="@color/colorSecondaryDark"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_places_save_button_label"
                android:layout_marginVertical="@dimen/add_places_save_button_margin"
                happyPlaces:backgroundTint="@color/colorSecondaryDark"
                />

        </LinearLayout>

       </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>